// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`when passing unknown tasks > should throw error with suggestions if find similar tasks 1`] = `
---------- Context -----------
Working Directory: /ROOT/test/__fixtures__/main
Command: /ROOT/nadle.mjs --max-workers 1 --no-footer --config nadle.unknown.ts boot
---------- Stdout ------------
[log] <Bold><Cyan>🛠️ Welcome to Nadle {version}!</Cyan></BoldDim>
[log] Using Nadle from /ROOT/lib/index.js
[log] Loaded configuration from /ROOT/test/__fixtures__/main/nadle.unknown.ts

[log]
<Bold><Red>RUN FAILED</Red></BoldDim> in <Bold>{duration}</BoldDim> <Dim>(<Bold>0</BoldDim><Dim> task executed, <Bold>0</BoldDim><Dim> task failed)</BoldDim>
[log]
For more details, re-run the command with the <Yellow>--stacktrace</Yellow> option to display the full error and help identify the root cause.
---------- Stderr ------------
[error] Task <Yellow><Bold>boot</BoldDim></Yellow> not found.
`;

exports[`when passing unknown tasks > should throw error with suggestions if find similar tasks 2`] = `
---------- Context -----------
Working Directory: /ROOT/test/__fixtures__/main
Command: /ROOT/nadle.mjs --max-workers 1 --no-footer --config nadle.unknown.ts build
---------- Stdout ------------
[log] <Bold><Cyan>🛠️ Welcome to Nadle {version}!</Cyan></BoldDim>
[log] Using Nadle from /ROOT/lib/index.js
[log] Loaded configuration from /ROOT/test/__fixtures__/main/nadle.unknown.ts

[log]
<Bold><Red>RUN FAILED</Red></BoldDim> in <Bold>{duration}</BoldDim> <Dim>(<Bold>0</BoldDim><Dim> task executed, <Bold>0</BoldDim><Dim> task failed)</BoldDim>
[log]
For more details, re-run the command with the <Yellow>--stacktrace</Yellow> option to display the full error and help identify the root cause.
---------- Stderr ------------
[error] Task <Yellow><Bold>build</BoldDim></Yellow> not found. Did you mean <Yellow><Bold>buildDev</BoldDim></Yellow>?
`;

exports[`when passing unknown tasks > should throw error with suggestions if find similar tasks 3`] = `
---------- Context -----------
Working Directory: /ROOT/test/__fixtures__/main
Command: /ROOT/nadle.mjs --max-workers 1 --no-footer --config nadle.unknown.ts compile
---------- Stdout ------------
[log] <Bold><Cyan>🛠️ Welcome to Nadle {version}!</Cyan></BoldDim>
[log] Using Nadle from /ROOT/lib/index.js
[log] Loaded configuration from /ROOT/test/__fixtures__/main/nadle.unknown.ts

[log]
<Bold><Red>RUN FAILED</Red></BoldDim> in <Bold>{duration}</BoldDim> <Dim>(<Bold>0</BoldDim><Dim> task executed, <Bold>0</BoldDim><Dim> task failed)</BoldDim>
[log]
For more details, re-run the command with the <Yellow>--stacktrace</Yellow> option to display the full error and help identify the root cause.
---------- Stderr ------------
[error] Task <Yellow><Bold>compile</BoldDim></Yellow> not found. Did you mean <Yellow><Bold>compileTs</BoldDim></Yellow>, <Yellow><Bold>compileJs</BoldDim></Yellow>, or <Yellow><Bold>compileCss</BoldDim></Yellow>?
`;

exports[`when passing unknown tasks > should throw error without any suggestions if not find any similar tasks 1`] = `
---------- Context -----------
Working Directory: /ROOT/test/__fixtures__/main
Command: /ROOT/nadle.mjs --max-workers 1 --no-footer --config nadle.unknown.ts unknown
---------- Stdout ------------
[log] <Bold><Cyan>🛠️ Welcome to Nadle {version}!</Cyan></BoldDim>
[log] Using Nadle from /ROOT/lib/index.js
[log] Loaded configuration from /ROOT/test/__fixtures__/main/nadle.unknown.ts

[log]
<Bold><Red>RUN FAILED</Red></BoldDim> in <Bold>{duration}</BoldDim> <Dim>(<Bold>0</BoldDim><Dim> task executed, <Bold>0</BoldDim><Dim> task failed)</BoldDim>
[log]
For more details, re-run the command with the <Yellow>--stacktrace</Yellow> option to display the full error and help identify the root cause.
---------- Stderr ------------
[error] Task <Yellow><Bold>unknown</BoldDim></Yellow> not found.
`;
